[project]
name = "Yuqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aioredis>=2.0.1",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pydantic>=2.11.10",
    "pympler>=1.1",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
