[project]
name = "Yuqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "click>=8.3.0",
    "disutils>=1.4.32.post2",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "faststream[rabbit]>=0.6.3",
    "greenlet>=3.2.4",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "psycopg>=3.2.12",
    "pydantic>=2.11.10",
    "pympler>=1.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "redis-async>=0.0.1",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
